--- a/src/app/views/outlets-details/outlets-details/outlets-details.component.html
+++ b/src/app/views/outlets-details/outlets-details/outlets-details.component.html
@@ -12,7 +12,7 @@
         
                     <!-- Featured image -->
                     <div class="view overlay rounded  mb-lg-0 mb-4 waves-light" mdbWavesEffect style="width: 100%;">
-                        <img class="img-fluid z-depth-2" src="https://mdbootstrap.com/img/Photos/Others/img%20(27).jpg"
+                        <img class="img-fluid z-depth-2" [src]="restaurantObj.restaurant_logo"
                             alt="Sample image" style="width: 130px;height: 130px;object-fit: cover;">
                         <a>
                             <div class="mask rgba-white-slight"></div>
