--- a/src/app/views/checkout/common/delivery-details/delivery-details.component.html
+++ b/src/app/views/checkout/common/delivery-details/delivery-details.component.html
@@ -49,4 +49,4 @@
         </mdb-card-body>
     </mdb-card>
 
-    <a  mdbBtn color="red" mdbWavesEffect class="mt-3">Proceed to Pay</a>
+    <a  mdbBtn color="red" mdbWavesEffect class="mt-3" (click)="makePayment(totalamount)">Proceed to Pay</a>
