--- a/src/app/views/outlets-details/common/menu/menu.component.scss
+++ b/src/app/views/outlets-details/common/menu/menu.component.scss
@@ -24,3 +24,11 @@ ul{
     }
 }
 }
+.active{
+    border-left: 3px solid #750000 !important;
+    cursor: pointer;
+    font-weight: 600;
+    transition: 0.5s;
+    background: #ed4134;
+    color: white;
+}
