--- a/src/app/views/dashboards/dashboard1/dashboard1.component.html
+++ b/src/app/views/dashboards/dashboard1/dashboard1.component.html
@@ -1,2 +1,2 @@
-<app-banner-carousel></app-banner-carousel>
+<!-- <app-banner-carousel></app-banner-carousel> -->
 <app-categories></app-categories>
