--- a/src/app/views/dashboards/common/categories/categories.component.html
+++ b/src/app/views/dashboards/common/categories/categories.component.html
@@ -1,5 +1,5 @@
 <section class="pb-3 text-center ">
-    <div class="container mt-5">
+    <div class="container mt-5 pt-5">
         <!-- <ul class="carousel-multi-item multi-animation" [type]="'carousel-multi-item'"
             [animation]="'fade'" *ngFor="let item of slides; let i = index" style="width: 100%;overflow:auto;">
             <li *ngFor="let card of item; let cardIndex = index">
@@ -36,7 +36,7 @@
     <div class="row">
 
         <div class="container p-0 d-flex flex-wrap">
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 card_parent row-col-eq ng-tns-c21-2 ng-star-inserted mb-4 mb-lg-0"
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 card_parent row-col-eq ng-tns-c21-2 ng-star-inserted mb-4 mb-lg-0 pb-3"
                *ngFor="let restro of restorantList;" >
                 <div class="card card_hover" >
                     <div class="card_inner" >
