--- a/src/app/views/checkout/common/delivery-details/delivery-details.component.html
+++ b/src/app/views/checkout/common/delivery-details/delivery-details.component.html
@@ -48,4 +48,4 @@
         </mdb-card-body>
     </mdb-card>
 
-    <a  mdbBtn color="red" mdbWavesEffect class="mt-3" routerLink="/checkout/payment-summary" (click)="makePayment(totalamount)">Proceed to Pay</a>
+    <a  mdbBtn color="red" mdbWavesEffect class="mt-3"  (click)="makePayment()">Proceed to Pay</a>
