--- a/src/app/main-layout/navigation/navigation.component.html
+++ b/src/app/main-layout/navigation/navigation.component.html
@@ -53,7 +53,7 @@
                 <a class="dropdown-item waves-light" mdbWavesEffect href="#">Log out</a>
             </div> -->
             <label class='toggle-label'>
-              <input type='checkbox'/>
+              <input type='checkbox' id="deliverytype" aria-checked="true"  (click)="changedeliverytype()"/>
                 <span class='back'>
                  <span class='toggle'></span>
                   <span class='label on'>Delivery</span>
