--- a/src/app/views/checkout/common/address/address.component.html
+++ b/src/app/views/checkout/common/address/address.component.html
@@ -30,7 +30,7 @@
                         <p class="font-weight-bold mb-3">  <small class="text-muted">Mobile no:-{{address.mobileno}}</small></p>
                         <p class="font-weight-bold mb-3"> <small class="text-muted">Email id:-{{address.email}}</small></p>
                     </a>
-                    <a  mdbBtn color="red" mdbWavesEffect size="sm" class="mt-3">Deliver Here</a>
+                    <a  mdbBtn color="red" mdbWavesEffect size="sm" class="mt-3" (click)="setdeliveraddress(address)">Deliver Here</a>
                 </mdb-card-body>
               </mdb-card>
           </div>
