--- a/src/app/views/maps/map1/map1.component.html
+++ b/src/app/views/maps/map1/map1.component.html
@@ -1,18 +1,18 @@
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-12">
         <!--Card-->
         <mdb-card cascade="true" narrower="true" class="mt-5">
 
             <!--Card image-->
-            <div class="view gradient-card-header blue darken-2 ">
+            <!-- <div class="view gradient-card-header blue darken-2 ">
                 <h4 class="h4-responsive text-white">Regular map</h4>
-            </div>
+            </div> -->
             <!--/Card image-->
 
             <!--Card content-->
             <mdb-card-body class="text-center">
                 <agm-map   [latitude]="lat" [longitude]="lng" [mapTypeId]="'roadmap'" style="height: 300px">
-                    <agm-marker *ngFor="let map of maps; let i = index" [latitude]="map.latitude"  [label]="map.restaurant_name" [longitude]="map.longitude"></agm-marker>
+                    <agm-marker *ngFor="let map of maps; let i = index" [latitude]="map.latitude"  (markerClick)="moveToMenu(map,i);" routerLink="../outlets-details/outlets"  [label]="map.restaurant_name" [longitude]="map.longitude"></agm-marker>
                 </agm-map>
 
             </mdb-card-body>
@@ -20,75 +20,53 @@
         </mdb-card>
         <!--/.Card-->
     </div>
-    <div class="col-md-6">
-        <!--Card-->
+    <!-- <div class="col-md-6">
         <mdb-card cascade="true" narrower="true" class="mt-5">
 
-            <!--Card image-->
             <div class="view gradient-card-header  blue darken-2">
                 <h4 class="h4-responsive text-white">Hybrid map</h4>
             </div>
-            <!--/Card image-->
-
-            <!--Card content-->
             <mdb-card-body class="text-center">
                 <agm-map [latitude]="lat" [longitude]="lng" [mapTypeId]="'hybrid'" style="height: 300px">
                     <agm-marker  *ngFor="let map of maps; let i = index" [latitude]="map.latitude" [label]="map.restaurant_name" [longitude]="map.longitude"></agm-marker>
                 </agm-map>
 
             </mdb-card-body>
-            <!--/.Card content-->
         </mdb-card>
-        <!--/.Card-->
-    </div>
+    </div> -->
 </div>
-<div class="row">
+<!-- <div class="row">
     <div class="col-md-6">
-        <!--Card-->
         <mdb-card cascade="true" narrower="true" class="mt-5">
 
-            <!--Card image-->
             <div class="view gradient-card-header  blue darken-2">
                 <h4 class="h4-responsive text-white">Satelite map</h4>
             </div>
-            <!--/Card image-->
-
-            <!--Card content-->
             <mdb-card-body class="text-center">
                 <agm-map [latitude]="lat" [longitude]="lng" [mapTypeId]="'satellite'" style="height: 300px">
                     <agm-marker *ngFor="let map of maps; let i = index" [latitude]="map.latitude" [label]="map.restaurant_name" [longitude]="map.longitude"></agm-marker>
                 </agm-map>
 
             </mdb-card-body>
-            <!--/.Card content-->
         </mdb-card>
-        <!--/.Card-->
     </div>
     <div class="col-md-6">
-        <!--Card-->
         <mdb-card cascade="true" narrower="true" class="mt-5">
 
-            <!--Card image-->
             <div class="view gradient-card-header  blue darken-2">
                 <h4 class="h4-responsive text-white">Terrains map</h4>
             </div>
-            <!--/Card image-->
-
-            <!--Card content-->
             <mdb-card-body class="text-center">
                 <agm-map  [latitude]="lat" [longitude]="lng" [mapTypeId]="'terrain'" style="height: 300px">
                     <agm-marker *ngFor="let map of maps; let i = index" [latitude]="map.latitude" [label]="map.restaurant_name" [longitude]="map.longitude"></agm-marker>
                 </agm-map>
 
             </mdb-card-body>
-            <!--/.Card content-->
         </mdb-card>
-        <!--/.Card-->
     </div>
-</div>
-<div class="row justify-content-center">
+</div> -->
+<!-- <div class="row justify-content-center">
     <div class="col-md-10">
-        <!--Section: Docs link-->
         <section class="pb-4 pt-5">
             <panel header="Full documentation" color="primary-color">
                 <p class="card-text">Read the full documentation for these components.</p>
@@ -96,6 +74,5 @@
                    class="waves-effect waves-light">Learn more</a>
             </panel>
         </section>
-        <!--/.Section: Docs link-->
     </div>
-</div>
+</div> -->
