--- a/src/app/main-layout/register/register.component.html
+++ b/src/app/main-layout/register/register.component.html
@@ -52,15 +52,12 @@
       </div>     
       <label for="form3">Password</label>
     </div>
-    <div class="md-form mb-1">
+    <!-- <div class="md-form mb-1">
       <mdb-icon fas icon="envelope" class="prefix grey-text"></mdb-icon>
-      <input type="text" id="form5" formControlName="reffralcode" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.reffralcode.errors }"
+      <input type="text" id="form5" [(ngModel)]="reffralcode" class="form-control" 
       mdbInput>
-      <div *ngIf="submitted && f.reffralcode.errors" class="invalid-feedback">
-        <div *ngIf="f.reffralcode.errors.required">Referral Code is required</div>
-      </div>
       <label for="form2">Referral Code</label>
-    </div>
+    </div> -->
 
     <div class="text-center">
       <button type="button" mdbBtn gradient="red"  type="submit" block="true" rounded="true" class="z-depth-1a waves-light"
