--- a/src/app/main-layout/orderhistory/orderhistory.component.html
+++ b/src/app/main-layout/orderhistory/orderhistory.component.html
@@ -7,3 +7,42 @@
     <div class="col-md-2">order date:-<span>{{order.order_date}}</span></div>
     <div class="col-md-2">order_status:-<span>{{order.order_status}}</span></div>
 </div> 
+<div class="single-news" >
+
+    <!-- Grid row -->
+    <div class="row" style="margin-top: 6rem;padding: 14px;">
+
+      <!-- Grid column -->
+      <div class="col-md-3 col-4 p-0-8">
+        <div class="view overlay rounded z-depth-1">
+          <img class="img-fluid" src="https://santaeatsadmin.edigito.in/uploads/restaurant/20210913-0844PR_IMAGE_FINAL.jpg" alt="Sample image">
+          <a>
+            <div class="mask rgba-white-slight waves-light" mdbWavesEffect></div>
+          </a>
+        </div>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-9 col-8">
+        <!-- Excerpt -->
+        <div class="font-weight-bold d-flex dark-grey-text cart-plus-minus">
+            <div class="col-lg-11 col-10 text-truncate pl-0 mb-2">
+                <p class="font-weight-bold dark-grey-text mb-1">product name</p>
+            </div>
+        </div>
+       
+        <a href="#!" class="red-text">
+            <h6 class="font-weight-bold mb-3">
+                <small class="text-muted">products.category</small>
+            </h6>
+        </a>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
